android: keep NFC shell compatible with API 26